--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <body>
     <h1>Calculadora</h1>
     <div id="calculadora">
-      <div id="pantalla">0</div>
+      <div id="display" value="0">0</div>
       <button class="button" id="cancela">C</button>
       <button class="button" id="+/-">+/-</button>
       <button class="button" id="percentual">%</button>
       <button class="button" id="division">÷</button>
-      <button class="button" data-value="7">7</button>
-      <button class="button">8</button>
-      <button class="button">9</button>
+      <button class="button" value="7">7</button>
+      <button class="button" value="">8</button>
+      <button class="button" value="">9</button>
       <button class="button" id="moltiplication">X</button>
-      <button class="button">4</button>
-      <button class="button">5</button>
-      <button class="button">6</button>
+      <button class="button" value="">4</button>
+      <button class="button" value="">5</button>
+      <button class="button" value="">6</button>
       <button class="button" id="resta">-</button>
-      <button class="button">1</button>
-      <button class="button">2</button>
-      <button class="button">3</button>
+      <button class="button" value="">1</button>
+      <button class="button" value="">2</button>
+      <button class="button" value="">3</button>
       <button class="button" id="suma">+</button>
       <button class="button" id="cero">0</button>
       <button class="button" id="decimal">.</button>
